<?xml version="1.0"?>
<package format="2">
  <name>ur_description</name>
  <version>0.0.0</version>
  <description>The ur_description package</description>

  <maintainer email="danieltoftesch@hotmail.com">daniel</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
